--- a/_config.yml
+++ b/_config.yml
@@ -104,5 +104,5 @@ theme: next
 ## Docs: https://hexo.io/docs/one-command-deployment
 deploy:
   type: git
-  repo: 
-  branch: master
+  repo: git@github.com:yuki0320/yuki0320.github.io.git
+  branch: main
