--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -11,7 +11,7 @@ jobs: # 工作流
 
     strategy:
       matrix:
-        node-version: [12.x,14.x,15.x]
+        node-version: [12.x]
 
     steps: 
       - name: Checkout # 步骤1
