--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -24,5 +24,10 @@ jobs: # 工作流
         env: # 设置环境变量
           GITHUB_TOKEN: ${{ secrets.ACCESS_TOKEN }} # toKen私密变量
           # CODING_TOKEN: ${{ secrets.CODING_TOKEN }} # 腾讯云开发者平台（coding）私密token
-        run: yarn && hexo g && npm run deploy # 执行的命令  
+        run: npm install  && npm install hexo-cli -g  # 执行的命令  
         # package.json 中添加 "deploy": "bash deploy.sh"
+      - name: Deploy
+        run: |
+          hexo clean
+          hexo g
+          npm run deploy
