--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,4 +1,4 @@
-name: CI
+name: DEPLOY
 on:
   push:
     branches:
@@ -32,9 +32,6 @@ jobs:
         run: |
           npm i -g hexo-cli
           npm i
-      - name: Generate Clean
-        run: |
-          hexo clean
       - name: Generate hexo
         run: |
           hexo generate
