--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -27,10 +27,10 @@ jobs:
           ssh-keyscan github.com >> ~/.ssh/known_hosts
           git config --global user.name "yukitan"
           git config --global user.email "yukitan0202@gmail.com"
-      #- name: Update themes
-      #  run: |
-      #    git submodule init
-      #    git submodule update
+      - name: Update themes
+        run: |
+          git submodule init
+          git submodule update
       - name: Install dependencies
         run: |
           npm i -g hexo-cli
