feat: github action add clean

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -35,6 +35,9 @@ jobs:
         run: |
           npm i -g hexo-cli
           npm i
+      - name: Clean hexo
+        run: |
+          hexo clean
       - name: Generate hexo
         run: |
           hexo generate
