--- a/_config.yml
+++ b/_config.yml
@@ -135,7 +135,19 @@ symbols_count_time:
   # 网页底部是否显示
   total_symbols: true
   total_time: true
-
+sitemap:
+  path: sitemap.xml
+moon_menu:
+  back2top:
+    enable: true
+    icon: fa fa-chevron-up
+    func: back2top
+    order: -1
+  back2bottom:
+    enable: true
+    icon: fa fa-chevron-down
+    func: back2bottom
+    order: -2
 # Deployment
 ## Docs: https://hexo.io/docs/one-command-deployment
 deploy:
