--- a/_config.next.yml
+++ b/_config.next.yml
@@ -59,7 +59,7 @@ footer:
     # Icon name in Font Awesome. See: https://fontawesome.com/icons
     name: fa fa-user
     # If you want to animate the icon, set it to true.
-    animated: true
+    animated: false
     # Change the color of icon, using Hex Code.
     color: "#808080"
 
@@ -71,8 +71,8 @@ footer:
 
   # Beian ICP and gongan information for Chinese users. See: https://beian.miit.gov.cn, http://www.beian.gov.cn
   beian:
-    enable: true
-    icp: 粤ICP备16125101号-1	
+    enable: false
+    # icp: 	
     # The digit in the num of gongan beian.
     gongan_id:
     # The full num of gongan beian.
